# rudi-microservice/rudi-microservice-strukture/rudi-microservice-strukture-storage/src/main/java/org/rudi/microservice/strukture/storage/entity/provider/LinkedProducerEntity.java
@@ -31,6 +31,7 @@ public class LinkedProducerEntity extends AbstractAssetDescriptionEntity {
 	public static final String FIELD_ID = "id";
 	public static final String FIELD_UUID = "uuid";
 	public static final String FIELD_ORGANIZATION = "organization";
+	public static final String FIELD_LINKED_PRODUCER_STATUS = "linkedProducerStatus";
 
 	public static final String PROVIDER_FK = "provider_fk";
 	public static final String ORGANIZATION_FK = "organization_fk";
